doc(api): imporve error responses
